# geval

./: .gitignore  Makefile  app.py  correlation_data_consistency_497samples.csv  correlation_data_consistency_4samples_20250826_184517.csv  correlation_data_consistency_500samples.csv  correlation_data_consistency_50samples.csv  create_database.py  database.py  database_factory.py  database_overview.md  db_and_api_implementation_task.md  dummy_eval.py  dynamodb-schema-design-and-iac.md  dynamodb_manager.py  eval_correlation.py  evals_playground.py  generate_shuffle_n_summeval.py  geval.py  gpt4_eval.py  migration_guide.md  pyproject.toml  settings.py  task-dynamodb-migration-implementation.md  task-eval-infra-guide.md  utils.py
data/: summeval_4.json  summeval_shuffle_4.json  summeval_shuffle_50.json  summeval_shuffle_500.json
infrastructure/: README.md  app.py  cdk.json  deploy_dynamodb.py  deploy_guide.md  dynamodb_stack.py
metrics/llm_judges/: template.py
prompts/summeval/: coh_detailed.json  coh_detailed.txt  con_detailed.json  con_detailed.txt  flu_detailed.json  flu_detailed.txt  rel_detailed.json  rel_detailed.txt
results/: gpt4_con_detailed_openai.json  gpt4_con_detailed_openai_4.json  gpt4_con_detailed_openai_50.json  gpt4_con_detailed_openai_500.json  gpt4_con_detailed_openai_500_dummy.json
