[project]
name = "forked-geval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "openai>=1.101.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "prettytable>=3.16.0",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "streamlit>=1.49.0",
    "uvicorn>=0.35.0",
]
